[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torchembed"
version = "0.3.2"
description = "A PyTorch library of modern embedding strategies missing from torch.nn"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Liodon AI", email = "py.oss.ml@gmail.com" }]
keywords = [
    "pytorch", "embeddings", "deep-learning", "transformers", "rope",
    "alibi", "triton", "fused-kernels", "positional-encoding",
    "rotary-embeddings", "vision-transformer", "diffusion-models",
    "llm", "gpu", "cuda", "fourier-features", "patch-embedding",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
triton = ["triton>=3.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "triton>=3.0",
    "pdoc>=16.0",
    "torch>=2.0",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.urls]
Homepage = "https://github.com/liodon-ai/torchembed"
Documentation = "https://github.com/liodon-ai/torchembed"
Repository = "https://github.com/liodon-ai/torchembed"
Issues = "https://github.com/liodon-ai/torchembed/issues"

[tool.hatch.build.targets.wheel]
packages = ["torchembed"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=torchembed --cov-report=term-missing"
